--- a/NitroScan_ModelBuild.ipynb
+++ b/NitroScan_ModelBuild.ipynb
@@ -202,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "pX9Ab1VoNB1x"
       },
@@ -221,13 +221,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PyCLZmSoPBA2",
-        "outputId": "620fd1b6-6225-4526-e6a8-a2ed7124751e"
+        "outputId": "cfd0d7b3-59ac-40b6-dab4-f85d03c86832"
       },
       "outputs": [
         {
@@ -245,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "kS1d_ABzQ0UN"
       },
@@ -259,13 +259,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kjSNa3_DRJQO",
-        "outputId": "e5488420-4e69-4c1b-b9a1-9bec8feb97d0"
+        "outputId": "fddc7e74-d9fe-439f-a704-5ad10ab44c12"
       },
       "outputs": [
         {
@@ -273,7 +273,7 @@
           "name": "stdout",
           "text": [
             "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/resnet/resnet50_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-            "94765736/94765736 [==============================] - 4s 0us/step\n",
+            "94765736/94765736 [==============================] - 1s 0us/step\n",
             "Model: \"resnet50\"\n",
             "__________________________________________________________________________________________________\n",
             " Layer (type)                Output Shape                 Param #   Connected to                  \n",
@@ -813,7 +813,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "khuowcDHZeke"
       },
@@ -825,13 +825,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q3WMDsnyatyS",
-        "outputId": "9fd35233-0fce-423e-97b2-3b4ef4f31052"
+        "outputId": "fc4552da-c91e-4adc-fb70-9e8f4a0f697e"
       },
       "outputs": [
         {
@@ -849,13 +849,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4aAXKSmLc-1Y",
-        "outputId": "2e5fe93f-d626-4b52-dae1-0622b78f7d82"
+        "outputId": "38aaf245-fba5-4636-d91d-6b035dc017a6"
       },
       "outputs": [
         {
@@ -873,13 +873,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nt0Yd0KjdU5-",
-        "outputId": "ebe89cce-6cd7-4c93-b811-2f577f07ecb9"
+        "outputId": "c90bf841-bb82-4f1c-bfe7-df928cb023ed"
       },
       "outputs": [
         {
@@ -1431,7 +1431,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "hNUxSPXugb8M"
       },
@@ -1446,13 +1446,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ampLsG9WtzLt",
-        "outputId": "04ff63aa-d06a-4047-9c0d-d991df2db826"
+        "outputId": "af17904a-4b2a-4f2c-fbc4-d4af091a8495"
       },
       "outputs": [
         {
@@ -1678,12 +1678,12 @@
       ],
       "metadata": {
         "id": "OJg03Rd1G4BI",
-        "outputId": "b1dddd82-2077-433f-9305-4096a0475640",
+        "outputId": "3939609d-f924-40b2-8798-fc5f586d6124",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -1720,7 +1720,7 @@
       ],
       "metadata": {
         "id": "lCLoR0I_G9uS",
-        "outputId": "f45cde46-4373-421f-87f0-79ae4caf8218",
+        "outputId": "c27aa9c5-9941-4361-d14e-07b58a843991",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2276,28 +2276,13 @@
         "  img_result = img_to_array(image)\n",
         "  img_result = np.expand_dims(img_result, axis = 0)\n",
         "  img_result = img_result / 255.\n",
-        "  return img_result\n",
-        "\n",
-        "test_img= \"/content/drive/MyDrive/LCC/Resized_Images/Level 03/IMG_20210721_102122.png\"\n",
-        "print(test_img)"
+        "  return img_result\n"
       ],
       "metadata": {
-        "id": "JzY8hgVLHLzQ",
-        "outputId": "ab23f046-b31b-40f7-ec72-01466e20f647",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "JzY8hgVLHLzQ"
       },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/drive/MyDrive/LCC/Resized_Images/Level 03/IMG_20210721_102122.png\n"
-          ]
-        }
-      ]
+      "execution_count": 17,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2307,28 +2292,51 @@
         "answer = np.argmax (resultArray, axis = 1)\n",
         "\n",
         "print(resultArray)\n",
-        "print(answer)\n",
-        "\n",
-        "index =answer[0]\n",
-        "print(\"predicted number:\"+ categories[index])"
+        "print(answer)\n"
       ],
       "metadata": {
         "id": "kzbR3ivVHdn_",
-        "outputId": "cbc6d043-b75f-4f31-9922-bef56adc413c",
+        "outputId": "f55d9aaa-5697-4458-837e-f07dc99eacd1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 24ms/step\n",
-            "[[3.9043814e-01 6.0790616e-01 1.6556425e-03 8.6454510e-11]]\n",
-            "[1]\n",
-            "predicted number:Level 03\n"
+            "1/1 [==============================] - 0s 23ms/step\n",
+            "[[0.2936988  0.09618038 0.30771095 0.30240992]]\n",
+            "[2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_img= \"/content/drive/MyDrive/LCC/Splitted_Dataset/val/Level 04/IMG_20210721_095228.png\"\n",
+        "print(test_img)\n",
+        "index =answer[0]\n",
+        "print(\"predicted number:\"+ categories[index])"
+      ],
+      "metadata": {
+        "id": "7pDX6TnSU4vf",
+        "outputId": "94407393-f779-4277-f592-bfbf7cdae88b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive/MyDrive/LCC/Splitted_Dataset/val/Level 04/IMG_20210721_095228.png\n",
+            "predicted number:Level 04\n"
           ]
         }
       ]
@@ -2339,7 +2347,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyNbR+fwzltfBLSilhYWKB4F",
+      "authorship_tag": "ABX9TyP6/zm0lKjpotBdnUcRU0xH",
       "include_colab_link": true
     },
     "kernelspec": {
