--- a/NitroScan_ModelBuild.ipynb
+++ b/NitroScan_ModelBuild.ipynb
@@ -70,7 +70,7 @@
         }
       ],
       "source": [
-        "!pip install tensorflow"
+        "!pip install tensorflow   #installing framework and libraries"
       ]
     },
     {
@@ -202,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "pX9Ab1VoNB1x"
       },
@@ -221,7 +221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -239,13 +239,13 @@
         }
       ],
       "source": [
-        "from google.colab import drive\n",
+        "from google.colab import drive     #connecting to Google Drive\n",
         "drive.mount('/content/drive')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "kS1d_ABzQ0UN"
       },
@@ -253,13 +253,13 @@
       "source": [
         "IMAGE_SIZE=[224,224]\n",
         "\n",
-        "train_dir = '/content/drive/MyDrive/LCC/Splitted_Dataset/train'\n",
+        "train_dir = '/content/drive/MyDrive/LCC/Splitted_Dataset/train'    #paths to training and validation sets\n",
         "val_dir = '/content/drive/MyDrive/LCC/Splitted_Dataset/val'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -807,25 +807,25 @@
         }
       ],
       "source": [
-        "myResnet = ResNet50(input_shape=IMAGE_SIZE +[3], weights='imagenet' , include_top = False)\n",
+        "myResnet = ResNet50(input_shape=IMAGE_SIZE +[3], weights='imagenet' , include_top = False)     #initializing ResNet50 model\n",
         "print (myResnet.summary())"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "khuowcDHZeke"
       },
       "outputs": [],
       "source": [
-        "for layer in myResnet.layers:\n",
+        "for layer in myResnet.layers:       #setting layers as non-trinable\n",
         "  layer.trainable=False"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -849,7 +849,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -867,13 +867,13 @@
         }
       ],
       "source": [
-        "num_classes=len(Classes)\n",
+        "num_classes=len(Classes)  #Number of labelled classes in the dataset\n",
         "print(num_classes)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1423,7 +1423,7 @@
         }
       ],
       "source": [
-        "PlusFlattenLayer=Flatten()(myResnet.output)\n",
+        "PlusFlattenLayer=Flatten()(myResnet.output)                                  #adding layers\n",
         "prediction= Dense(num_classes, activation='softmax')(PlusFlattenLayer)\n",
         "model = Model(inputs = myResnet.input, outputs = prediction)\n",
         "print (model.summary())"
@@ -1431,7 +1431,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "hNUxSPXugb8M"
       },
@@ -1446,7 +1446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1465,7 +1465,7 @@
         }
       ],
       "source": [
-        "from keras.preprocessing.image import ImageDataGenerator\n",
+        "from keras.preprocessing.image import ImageDataGenerator     #using data augmentation\n",
         "\n",
         "train_datagen = ImageDataGenerator(rescale=1./255,\n",
         "                                   shear_range=0.2,\n",
@@ -1604,7 +1604,7 @@
         }
       ],
       "source": [
-        "result=model.fit(training_set,\n",
+        "result=model.fit(training_set,                     #training the model\n",
         "                 validation_data=test_set,\n",
         "                 epochs=50,\n",
         "                 steps_per_epoch=len(training_set),\n",
@@ -1683,7 +1683,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1707,7 +1707,7 @@
       "metadata": {
         "id": "5iGhQ6xJGynF"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1725,7 +1725,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2281,7 +2281,7 @@
       "metadata": {
         "id": "JzY8hgVLHLzQ"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2301,7 +2301,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2329,7 +2329,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2347,7 +2347,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyP6/zm0lKjpotBdnUcRU0xH",
+      "authorship_tag": "ABX9TyPRDJ0ObNnftIhj4SV2a8tn",
       "include_colab_link": true
     },
     "kernelspec": {
