--- a/NitroScan_ModelBuild.ipynb
+++ b/NitroScan_ModelBuild.ipynb
@@ -1614,7 +1614,7 @@
     {
       "cell_type": "code",
       "source": [
-        "plt.plot(result.history['accuracy'], label = 'train_acc')\n",
+        "plt.plot(result.history['accuracy'], label = 'train_acc')   #accuracy curve\n",
         "plt.plot(result.history['val_accuracy'], label='val_acc')\n",
         "plt.legend()\n",
         "plt.show()"
@@ -1644,7 +1644,7 @@
     {
       "cell_type": "code",
       "source": [
-        "plt.plot(result.history['loss'], label = 'train_loss')\n",
+        "plt.plot(result.history['loss'], label = 'train_loss')           #loss curve\n",
         "plt.plot(result.history['val_loss'], label='val_loss')\n",
         "plt.legend()\n",
         "plt.show()"
@@ -1715,7 +1715,7 @@
       "source": [
         "categories = ['Level 02', 'Level 03', 'Level 04', 'Level 05']\n",
         "\n",
-        "model= tf.keras.models.load_model('/content/drive/MyDrive/LCC/leaf_color_model.h5')\n",
+        "model= tf.keras.models.load_model('/content/drive/MyDrive/LCC/leaf_color_model.h5')          #loading the model\n",
         "print(model.summary())"
       ],
       "metadata": {
@@ -2271,7 +2271,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def predictImage(img_path):\n",
+        "def predictImage(img_path):                                       #algorithm to predict image\n",
         "  image = load_img(img_path, target_size=(224,224))\n",
         "  img_result = img_to_array(image)\n",
         "  img_result = np.expand_dims(img_result, axis = 0)\n",
@@ -2317,7 +2317,7 @@
     {
       "cell_type": "code",
       "source": [
-        "test_img= \"/content/drive/MyDrive/LCC/Splitted_Dataset/val/Level 04/IMG_20210721_095228.png\"\n",
+        "test_img= \"/content/drive/MyDrive/LCC/Splitted_Dataset/val/Level 04/IMG_20210721_095228.png\"              #testing image\n",
         "print(test_img)\n",
         "index =answer[0]\n",
         "print(\"predicted number:\"+ categories[index])"
@@ -2347,7 +2347,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyPRDJ0ObNnftIhj4SV2a8tn",
+      "authorship_tag": "ABX9TyOJ9x32xaJLiAtpyjWBAI7Z",
       "include_colab_link": true
     },
     "kernelspec": {
